tests/NormalTests/paczka2/big_fuzzy/48367280.err
Error in line 5: YJc A35 96,7
Error in line 3: lfHhC3i A318 87,4
Error in line 28: cABUp A35 13,0
Error in line 41: YJc A35 50,0
Error in line 37: RppVO4 A94 99,4
Error in line 45: lfHhC3i A4 7,6
Error in line 48: mB2vltyvPA A94 69,7
Error in line 49: mB2vltyvPA A35 5,7
Error in line 53: RppVO4 A35 38,6
Error in line 62: UigWlGEr A35 21,8
Error in line 80: cABUp A35 73,3
Error in line 87: cABUp A318 22,8
Error in line 97: RppVO4 A94 75,2
Error in line 102: S745 A94 -2,6
Error in line 106: S745 S745 22,9
Error in line 131: RppVO4 A318 179,8
Error in line 170: YJc S745 -2,8
Error in line 172: mB2vltyvPA A318 49,3
Error in line 173: mB2vltyvPA S745 4,3
Error in line 174: mB2vltyvPA A318 84,3
Error in line 188: S745 A35 747
Error in line 192: lfHhC3i A94 23,0
Error in line 176: RppVO4 S745 65,0
Error in line 189: YJc S745 5,9
Error in line 197: S745 A94 133,6
Error in line 201: cABUp A318 40,6
Error in line 207: lfHhC3i A318 89,8
Error in line 198: mB2vltyvPA S745 39,5
Error in line 216: UigWlGEr S745 41,7
Error in line 203: YJc A94 4,1
Error in line 229: lfHhC3i A35 12,2
Error in line 228: mB2vltyvPA S745 68,8
Error in line 225: YJc A35 59,9
Error in line 240: UigWlGEr A318 -1,4
Error in line 239: S745 A35 137,6
